--- a/css/style.css
+++ b/css/style.css
@@ -458,3 +458,23 @@ img.hover-shadow {
 .hover-shadow:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.modal-content {
+  overflow: visible ;
+}
+
+.numbertext {
+  z-index: 1000 ;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.close {
+  z-index: 2000 ;
+  color: white;
+  font-size: 35px;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  cursor: pointer;
+}
