--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,9 @@ body {
   background: var(--red);
   border-radius: 3px;
 }
+
+
+
 .row > .column {
   padding: 0 8px;
 }
@@ -352,11 +355,11 @@ body {
 /* The Modal (background) */
 .modal {
   display: none;
-  position: fixed;
+  position: relative;
   z-index: 1;
   padding-top: 100px;
-  left: 0;
-  top: 0;
+  left: 50;
+  top: 50;
   width: 100%;
   height: 100%;
   overflow: auto;
