--- a/css/style.css
+++ b/css/style.css
@@ -358,8 +358,8 @@ body {
   position: relative;
   z-index: 1;
   padding-top: 100px;
-  left: 50;
-  top: 50;
+  left: 50px;
+  top: 50px;
   width: 100%;
   height: 100%;
   overflow: auto;
