--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ body {
 /* The Modal (background) */
 .modal {
   display: none;
-  position: relative;
+  position: absolute;
   z-index: 1;
   padding-top: 100px;
   left: 50px;
