--- a/css/style.css
+++ b/css/style.css
@@ -355,11 +355,11 @@ body {
 /* The Modal (background) */
 .modal {
   display: none;
-  position: absolute;
+  position: fixed;
   z-index: 1;
   padding-top: 100px;
-  left: 50px;
-  top: 5px;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
