--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,7 @@ body {
   display: none;
   position: fixed;
   z-index: 1;
-  padding-top: 200px;
+  padding-top: 100px;
   left: 0;
   top: 0;
   width: 100%;
@@ -368,6 +368,7 @@ body {
 
 /* Modal Content */
 .modal-content {
+  margin-top: 100px
   position: relative;
   background-color: #fefefe;
   margin: auto;
