--- a/css/style.css
+++ b/css/style.css
@@ -354,27 +354,23 @@ body {
 
 /* The Modal (background) */
 .modal {
-  display: none;
+  display: none; /* hidden by default */
   position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: black;
+  background: rgba(0,0,0,0.8);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* Modal Content */
 .modal-content {
-  margin-top: 100px
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0;
-  width: 90%;
-  max-width: 1200px;
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 10px;
 }
 
 /* The Close Button */
