--- a/css/style.css
+++ b/css/style.css
@@ -354,23 +354,26 @@ body {
 
 /* The Modal (background) */
 .modal {
-  display: none; /* hidden by default */
+  display: none;
   position: fixed;
-  top: 0;
+  z-index: 1;
+  padding-top: 100px;
   left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.8);
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  overflow: auto;
+  background-color: black;
 }
 
+/* Modal Content */
 .modal-content {
-  max-width: 90%;
-  max-height: 90%;
-  border-radius: 10px;
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
 }
 
 /* The Close Button */
