--- a/css/style.css
+++ b/css/style.css
@@ -335,130 +335,105 @@ body {
 }
 
 
-
-.row > .column {
-  padding: 0 8px;
+/* Thumbnail grid images */
+.row .column img {
+  width: 200px;
+  height: 250px;
+  object-fit: cover;
+  cursor: pointer;
 }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Create four equal columns that floats next to eachother */
-.column {
-  float: left;
-  width: 25%;
-}
-
-/* The Modal (background) */
+/* Modal background */
 .modal {
   display: none;
   position: fixed;
-  z-index: 1;
-  padding-top: 100px;
+  z-index: 9999;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
+  background: rgba(0,0,0,0.95);
   overflow: auto;
-  background-color: black;
 }
 
-/* Modal Content */
+/* Modal content box */
 .modal-content {
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0;
+  margin: 60px auto;
   width: 90%;
-  max-width: 1200px;
+  max-width: 1000px;
+  position: relative;
 }
 
-/* The Close Button */
-.close {
-  color: white;
-  position: absolute;
-  top: 10px;
-  right: 25px;
-  font-size: 35px;
-  font-weight: bold;
+/* BIG IMAGE inside modal */
+.modal-content img {
+  display: block;
+  margin: auto;
+  
+  /* This prevents your issue */
+  max-width: 90%;
+  max-height: 85vh;
+  
+  width: auto;
+  height: auto;
+  object-fit: contain;
 }
 
-.close:hover,
-.close:focus {
-  color: #999;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* Hide the slides by default */
+/* Slide container */
 .mySlides {
   display: none;
 }
 
-/* Next & previous buttons */
-.prev,
-.next {
+/* Close button */
+.close {
+  color: white;
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  font-size: 40px;
+  cursor: pointer;
+}
+
+/* Position next/prev buttons */
+.prev, .next {
   cursor: pointer;
   position: absolute;
   top: 50%;
-  width: auto;
+  font-size: 30px;
   padding: 16px;
-  margin-top: -50px;
   color: white;
-  font-weight: bold;
-  font-size: 20px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
   user-select: none;
-  -webkit-user-select: none;
 }
 
-/* Position the "next button" to the right */
+.prev {
+  left: 0;
+}
+
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+/* Thumbnails inside modal */
+.demo {
+  width: 80px;
+  height: 60px;
+  object-fit: cover;
+  opacity: .6;
+  cursor: pointer;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 100px;
-}
-
-/* Caption text */
-.caption-container {
-  text-align: center;
-  background-color: black;
-  padding: 2px 16px;
-  color: white;
-}
-
-img.demo {
-  opacity: 0.6;
-}
-
-.active,
+.demo.active,
 .demo:hover {
   opacity: 1;
 }
 
-img.hover-shadow {
-  transition: 0.3s;
+/* Number text (1/4) */
+.numbertext {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: white;
+  padding: 10px;
+  font-size: 14px;
 }
 
-.hover-shadow:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
 
