--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,9 @@ body {
   position: fixed;
   z-index: 9999;
   left: 0;
+  justify-content: center;
+  align-items: center; /* centers vertically */
+  padding-top: 0;
   top: 0;
   width: 100%;
   height: 100%;
@@ -434,6 +437,16 @@ body {
   color: white;
   padding: 10px;
   font-size: 14px;
+  margin-top: 60px;  /* moves it down */
+  z-index: 9999;
 }
-
+.mySlides img {
+  max-width: 90%;
+  max-height: 80vh;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  margin: auto;
+  display: block;
+}
 
