--- a/css/style.css
+++ b/css/style.css
@@ -335,14 +335,21 @@ body {
 }
 
 
-/* Thumbnail grid images */
-.row .column img {
-  width: 200px;
-  height: 250px;
-  object-fit: cover;
-  cursor: pointer;
+.row > .column {
+  padding: 0 8px;
 }
 
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Create four equal columns that floats next to eachother */
+.column {
+  float: left;
+  width: 25%;
+}
 /* Modal background */
 .modal {
   display: flex;
